--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .masthead h1 {
@@ -64,8 +64,41 @@ body {
         font-size: 1em;
     }
 }
-
 /* --------------------------------- */
+
+
+/* Tab styles */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+.tab button:hover {
+    background-color: #ddd;
+}
+
+.tab button.active {
+    background-color: #ccc;
+}
+
+.tab-content {
+    display: none;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+/* -------------------------------------- */
 
 table {
     width: 100%;
@@ -82,6 +115,56 @@ th, td {
 th {
     background-color: #f0f0f0;
 }
+
+/* Input form table styling */
+
+.input-table {
+    /*width: 100%;*/
+    margin: 0 auto;
+    max-width: 1200px;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+
+.input-table th, .input-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+.input-table th {
+    background-color: #f2f2f2;
+    color: #333;
+    text-align: left;
+}
+
+.input-table tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.input-table tr:hover {
+    background-color: #f1f1f1;
+}
+
+.input-table select, .input-table input[type="text"], .input-table input[type="time"] {
+    width: 100%;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+.input-table button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.input-table button:hover {
+    background-color: #45a049;
+}
+
+/* --------------------- */
 
 .date-header {
     margin-top: 20px;
@@ -113,12 +196,12 @@ th {
 }
 
 .disclaimer-banner {
-    background-color: #ffffcc; /* Light yellow background for visibility */
-    color: #333; /* Dark text for contrast */
+    background-color: #ffffcc;
+    color: #333;
     padding: 10px;
     text-align: center;
-    border-bottom: 1px solid #ccc; /* subtle separation from the rest of the page */
-    font-size: 14px; /* Adjust based on preference */
+    border-bottom: 1px solid #ccc;
+    font-size: 14px;
 }
 
 .content {
@@ -141,9 +224,9 @@ th {
 }
 
 .bar_content {
-    margin-left: 120px; /* Adjust based on the size of the live-time display */
+    margin-left: 120px;
     display: block;
-    width: calc(100% - 120px); /* Adjust width to accommodate time display */
+    width: calc(100% - 120px);
     transform: translateX(100%);
     animation: move 30s linear infinite;
 }
@@ -159,31 +242,31 @@ th {
     position: fixed;
     left: 0;
     top: 6.8%;
-    width: 50px; /* Collapsed width */
+    width: 50px;
     height: 100%;
     overflow-y: auto;
     background-color: #f0f0f0;
-    padding: 20px 5px; /* Adjust padding for collapsed state */
+    padding: 20px 5px;
     box-sizing: border-box;
-    transition: width 0.3s ease, padding 0.3s ease; /* Smooth transition */
+    transition: width 0.3s ease, padding 0.3s ease;
 }
 
 .sidebar.expanded {
-    width: 250px; /* Expanded width */
-    padding: 20px; /* Padding for expanded state */
+    width: 250px;
+    padding: 20px;
 }
 
 .sidebar a,
 .sidebar h3,
 .sidebar h4 {
     transition: opacity 0.3s ease;
-    opacity: 0; /* Hide text in collapsed state */
+    opacity: 0;
 }
 
 .sidebar.expanded a,
 .sidebar.expanded h3,
 .sidebar.expanded h4 {
-    opacity: 1; /* Show text in expanded state */
+    opacity: 1;
 }
 
 .sidebar-toggle {
@@ -198,12 +281,12 @@ th {
 }
 
 .sidebar.expanded ~ .sidebar-toggle {
-    left: 250px; /* Align toggle button with expanded sidebar */
+    left: 250px;
 }
 
 .sidebar-toggle:hover {
-    background-color: #e0e0e0; /* Change background color on hover */
-    transform: scale(1.1); /* Slightly enlarge on hover */
+    background-color: #e0e0e0;
+    transform: scale(1.1);
 }
 
 /* --------------------------------------  */
@@ -273,19 +356,19 @@ th {
 
 
 .error-message {
-    background-color: #ffdddd; /* Light red background */
-    border-left: 6px solid #f44336; /* Darker red border on the left for emphasis */
-    margin: 20px 0; /* Add some margin for spacing */
-    padding: 10px 20px; /* Padding for spacing inside the div */
-    color: #d8000c; /* Dark red text color for better readability */
-    font-size: 16px; /* Slightly larger font size for clarity */
-    border-radius: 5px; /* Optional: Rounds the corners of the border */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle shadow to make the error message "pop" */
+    background-color: #ffdddd;
+    border-left: 6px solid #f44336;
+    margin: 20px 0;
+    padding: 10px 20px;
+    color: #d8000c;
+    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .error-message p {
-    margin: 0; /* Removes default margin from the paragraph to control spacing more precisely */
-    padding: 0; /* Removes default padding for similar reasons */
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -342,8 +425,8 @@ th {
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
     display: inline-block;
-    width: 100%; /* Make label full width */
-    text-align: center; /* Center text inside label */
+    width: 100%;
+    text-align: center;
 }
 
 .file-input label:hover {
@@ -368,7 +451,7 @@ th {
 .file-name {
     font-size: 0.9em;
     color: #555;
-    flex-grow: 1; /* Allow file name to grow and take available space */
+    flex-grow: 1;
 }
 
 .upload-btn {
@@ -779,6 +862,7 @@ label[for="nav-toggle"], #nav-toggle {
 .nav-button:nth-of-type(8):hover ~ #nav-content-highlight {
     top: calc(16px + 378px);
 }
+
 .nav-button:nth-of-type(9):hover ~ #nav-content-highlight {
     top: calc(16px + 432px);
 }
@@ -798,7 +882,6 @@ label[for="nav-toggle"], #nav-toggle {
 .nav-button:nth-of-type(13):hover ~ #nav-content-highlight {
     top: calc(16px + 648px);
 }
-
 
 
 #nav-bar .fas {
