--- a/static/css/style.css
+++ b/static/css/style.css
@@ -496,6 +496,18 @@ th {
 /* csv file upload style end */
 /* ############################ */
 
+button:disabled {
+    background-color: #ccc;
+    color: #666;
+    cursor: not-allowed;
+}
+
+/* Style for disabled upload button */
+.upload-btn:disabled {
+    background-color: #ccc;
+    color: #666;
+    cursor: not-allowed;
+}
 
 /* Modal container */
 .modal {
@@ -655,6 +667,27 @@ th {
     font-size: 1.5rem;
     cursor: pointer;
     margin-left: 10px;
+}
+
+/* Style for the close button */
+.notification-banner .close-banner {
+    background-color: darkgrey;
+    color: white; /* White text */
+    border: none; /* Remove borders */
+    padding: 10px 15px; /* Some padding */
+    cursor: pointer; /* Pointer/hand icon */
+    border-radius: 5px; /* Rounded corners */
+    font-size: 16px; /* Increase font size */
+    transition: background-color 0.3s ease, transform 0.1s ease; /* Smooth transition */
+}
+
+.notification-banner .close-banner:hover {
+    background-color: #d32f2f; /* Darker red */
+}
+
+.notification-banner .close-banner:active {
+    background-color: #b71c1c; /* Even darker red */
+    transform: scale(0.95); /* Slightly reduce size */
 }
 
 
