feat: limit the number of fixtures that can be added manually to the length of the teams array.
feat: ensure uni team for manual selection is unique.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,6 +116,11 @@ th {
     background-color: #f0f0f0;
 }
 
+#location-table {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 /* Input form table styling */
 
 .input-table {
