--- a/templates/base.html
+++ b/templates/base.html
@@ -35,24 +35,23 @@
             <hr>
             <div id="nav-content-highlight"></div>
         </div>
-        <input type="checkbox" id="nav-footer-toggle">
-        <div id="nav-footer">
-            <div id="nav-footer-heading">
-                <div id="nav-footer-avatar">
-                    <img src="https://gravatar.com/avatar/4474ca42d303761c2901fa819c4f2547" alt="Avatar">
-                </div>
-                <div id="nav-footer-titlebox">
-                    <a id="nav-footer-title" href="https://www.wikipedia.com" target="_blank">Kenny Rogers</a>
-                    <span id="nav-footer-subtitle">Admin</span>
-                </div>
-                <label for="nav-footer-toggle">
-                    <i class="fas fa-caret-up"></i>
-                </label>
-            </div>
-            <div id="nav-footer-content">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </div>
-        </div>
+<!--        <input type="checkbox" id="nav-footer-toggle">-->
+<!--        <div id="nav-footer">-->
+<!--            <div id="nav-footer-heading">-->
+<!--                <div id="nav-footer-avatar">-->
+<!--                    <img src="https://gravatar.com/avatar/4474ca42d303761c2901fa819c4f2547" alt="Avatar">-->
+<!--                </div>-->
+<!--                <div id="nav-footer-titlebox">-->
+<!--                    <a id="nav-footer-title" href="https://www.wikipedia.com" target="_blank">Kenny Rogers</a>-->
+<!--                    <span id="nav-footer-subtitle">Admin</span>-->
+<!--                </div>-->
+<!--                <label for="nav-footer-toggle">-->
+<!--                    <i class="fas fa-caret-up"></i>-->
+<!--                </label>-->
+<!--            </div>-->
+<!--            <div id="nav-footer-content">-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
 
 <!--    <div class="sidebar">-->
