fix: settings saving

--- a/templates/assignments.html
+++ b/templates/assignments.html
@@ -47,11 +47,11 @@
     <form action="{{ url_for('upload_and_process_file') }}" method="post" class="input-table">
         <table id="inputTable">
             <tr>
-                <th>Uni Team</th>
-                <th>Opposition</th>
-                <th>Location</th>
-                <th>Time</th>
-                <th>Umpires required</th>
+                <th>Uni Team <span class="tooltip-icon" title="Select the university team for this fixture">❓</span></th>
+                <th>Opposition <span class="tooltip-icon" title="Enter the opposition team for this fixture">❓</span></th>
+                <th>Location <span class="tooltip-icon" title="Select the location of the match">❓</span></th>
+                <th>Time <span class="tooltip-icon" title="Enter the start time of the match">❓</span></th>
+                <th>Umpires required <span class="tooltip-icon" title="Select the number of umpires required for the match">❓</span></th>
             </tr>
             <tr>
                 <td>
