--- a/static/css/style.css
+++ b/static/css/style.css
@@ -121,6 +121,52 @@ th {
     margin: 0 auto;
 }
 
+.tooltip-icon {
+    cursor: pointer;
+    margin-left: 5px;
+    color: #007BFF;
+    position: relative; /* Required for the tooltip positioning */
+}
+
+.tooltip-icon::after {
+    content: attr(title);
+    position: absolute;
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    top: -5px;
+    left: 105%;
+    white-space: nowrap;
+    z-index: 1000;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s, visibility 0.3s; /* Smooth transition */
+}
+
+.tooltip-icon::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent transparent #333;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s, visibility 0.3s; /* Smooth transition */
+}
+
+.tooltip-icon:hover::after,
+.tooltip-icon:hover::before {
+    opacity: 1;
+    visibility: visible;
+}
+
+
+/* ----------------------------------- */
+
 /* Input form table styling */
 
 .input-table {
