--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <title>The BuzzBot</title>
+
+    {% block style %}
+    {% endblock %}
 </head>
 
 <body>
@@ -30,6 +33,7 @@
             <div class="nav-button"><i class="fas fa-palette"></i><span><a href="{{ url_for('upload_and_process_file') }}">&#x1F3E0; Home</a></span></div>
             <div class="nav-button"><i class="fas fa-images"></i><span> <a href="{{ url_for('settings') }}">&#x2699; Settings</a></span></div>
             <div class="nav-button"><i class="fas fa-thumbtack"></i><span><a href="{{ url_for('locations') }}">&#x1F4CD; Locations</a></span></div>
+            <div class="nav-button"><i class="fas fa-thumbtack"></i><span><a href="{{ url_for('about') }}">About</a></span></div>
             {% block nav %}
             {% endblock%}
             <hr>
